# CppTemplate

./: README.md
Windows/Cmake/CmakeBuildDll/src/: hello.cpp
Windows/Cmake/CmakeLinkDll/: CMakeLists.txt
Windows/Cmake/CmakeLinkLib/: CMakeLists.txt
Windows/Cmake/CmakeLinkLib/include/: hello.h
Windows/Cmake_VSCode/HelloWorld/: CMakeLists.txt  README.md
Windows/Cmake_VSCode/MultiDirectory/: CMakeLists.txt  README.md
Windows/Cmake_VSCode/MultiDirectory/hello/: CMakeLists.txt  hello.cpp  hello.h  hello_sub.cpp  hello_sub.h
Windows/Cmake_VSCode/MultiDirectory/include/: utils.h
Windows/Cmake_VSCode/MultiDirectory/src/: main.cpp
Windows/Cmake_VSCode/MultiDirectory/world/: CMakeLists.txt  world.cpp  world.h
Windows/Cmake_VisualStudio/CmakeBuildDll/: CMakeLists.txt
Windows/Cmake_VisualStudio/CmakeBuildLib/: CMakeLists.txt
Windows/Cmake_VisualStudio/CmakeBuildLib/install/lib/: hello_lib.lib
Windows/Cmake_VisualStudio/CmakeBuildLib/src/: good.cpp  good.h  hello.cpp
Windows/Cmake_VisualStudio/CmakeLinkDll/include/: hello.h
Windows/Cmake_VisualStudio/CmakeLinkDll/lib/: hello_dll.lib
Windows/Cmake_VisualStudio/CmakeLinkDll/src/: main.cpp
